--- a/index.css
+++ b/index.css
@@ -1,13 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 .card_All{
     width: 85%;
-    height: 230px;
+    height: 270px;
+    overflow: hidden;
     border-radius: 3px;
     background-color: white;
     box-shadow: rgb(0 0 0 / 9%) 0px 0px 0px 1px;
     transition-property: all;
     transition-duration: 200ms;
     transition-timing-function: ease, ease;
+}
+.imgFeedback>img{
+    width: 100%;
+    height: 30%;
 }
 .card_All:hover{
     box-shadow:rgb(0 0 0 / 9%) 0px 2px 23px 9px;;
